revision history for NetPacket

{{$NEXT}}

0.43.1    2010-06-11 21:45:15 America/Montreal
    * Change a test to use explicit number of tests instead of 'done_testing'.

0.43.0  May 23rd, 2010
    * Fixed UDP checksum. Thanks to Hal Finkel. (RT#56235)
    * Added Joel Knight's code for IPv6 support from 
        http://www.packetmischief.ca/code/netpacket/. 
        Thanks to Doug Farley for the bug report. (RT#57560)

0.42.0 March 25th, 2010
    * Updated license to Artistic 2.0
    * Fixed bad call to 'data()' in ICMP. Thanks to Ventz Petkov.
        (RT#52627)

0.41.1
    * Fixed bug 37931: export of ICMP_MASKREQ
    * Fixed UDP and TCP checksums for odd-sized packets
    * Fixed import from NetPacket::UDP
    * Fixed bug 37931: export of ICMP_MASKREQ
    * Added git repo and bug tracking info to META.yml

0.41_0
    * Fixed bug 18941 - NetPacket::IP includes trailing 
        trash bytes in $ip->{data}
    * Fixed bug 7010 - IP flags field lost in IP::encode()
    * Added Build.PL 
    * Moved history off the README file into this one (Changes)
    * Moved module structure to /lib
    * Version now gathered from NetPacket.pm
    * META.yml added to MANIFEST
    * Added myself (Yanick) as author
    * Switched to major.minor.revision version notation

0.04
    * Checksum offset fix, thanks to J. Hoagland for pointing this out.