@@ -1,3 +1,4 @@
+dist.ini
 \.git
 \.swp$
 _build
@@ -11,3 +12,4 @@ pm_to_blib
 ^MYMETA.yml$
 contrib
 ^NetPacket-.*
+weaver.ini
