@@ -1,23 +1,32 @@
 name        = NetPacket
-version     = 0.43.1
+version     = 0.43.2
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Artistic_2_0
 copyright_holder = Yanick Champoux
 
 [ModuleBuild]
 
-[License]
-
-[Bugtracker]
+[GithubMeta]
+remote=github
 
 [Homepage]
+[Bugtracker]
 
+[MetaYAML]
+[MetaJSON]
+
+[PodWeaver]
+
+;[ExecDir]
+;dir=scripts
+
+[License]
 ;[Repository]
 
 [NextRelease]
 time_zone = America/Montreal
 
-[MetaYAML]
+[MetaProvides::Package]
 
 [MatchManifest]
 [ManifestSkip]
@@ -27,12 +36,21 @@ time_zone = America/Montreal
 [PkgVersion]
 [PodVersion]
 
+;Tests
+[ReportVersions]
+
+[Signature]
+
+[AutoPrereq]
+
 
 ; Build
-[Git::CommitBuild]
 
 ; Release 
-;[TestRelease]
+[CheckChangesHasContent]
+
+[TestRelease]
+
 
 [ConfirmRelease]
 
@@ -40,12 +58,17 @@ time_zone = America/Montreal
 
 [Git::Commit]
 
-;[Git::Push]
-;push_to = github
-[ Git::Tag]
-tag_format = code/v%v
+[Git::CommitBuild]
+release_branch = releases
+
+[Git::Tag]
+tag_format = v%v
+branch = releases
+
+[Git::Push]
+push_to = github
 
 [UploadToCPAN]
 
-;[Twitter]
-hash_tags = #perl #cpan #netpacket
+[Twitter]
+;hash_tags = #perl #cpan #netpacket
