@@ -1,0 +1,21 @@
+[@CorePrep]
+
+[Name]
+[Version]
+
+[Region  / prelude]
+
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Collect / FUNCTIONS]
+command = function
+
+[Leftovers]
+
+[Region  / postlude]
+
